--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.3",
+    "@angular/animations": "^7.2.15",
     "@angular/cdk": "^8.0.2",
-    "@angular/common": "~8.0.0",
+    "@angular/common": "^7.2.15",
     "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
+    "@angular/core": "^8.0.3",
     "@angular/forms": "~8.0.0",
     "@angular/material": "^8.0.2",
     "@angular/platform-browser": "~8.0.0",
@@ -23,10 +23,17 @@
     "@angular/router": "~8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.0.0-rc.1",
     "angular-calendar": "^0.27.12",
+    "angular-calendar-scheduler": "^1.0.10",
+    "angular-draggable-droppable": "^4.3.2",
+    "angular-resizable-element": "^3.2.4",
+    "animations": "0.0.0",
+    "bootstrap": "^4.3.1",
     "date-fns": "^1.30.1",
-    "rxjs": "~6.4.0",
+    "install-peerdeps": "^1.10.2",
+    "moment": "^2.24.0",
+    "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
