--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^1.30.1",
     "install-peerdeps": "^1.10.2",
     "moment": "^2.24.0",
+    "ng2-select": "^2.0.0",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "^0.9.1"
